[SLT-26] Fix common design header and layout issues

--- a/html/themes/custom/common_design_subtheme/sass/cd/cd-header/_cd-header.scss
+++ b/html/themes/custom/common_design_subtheme/sass/cd/cd-header/_cd-header.scss
@@ -1,6 +1,13 @@
 //——————————————————————————————————————————————————————————————————————————————
 // Common Design: Header
 //——————————————————————————————————————————————————————————————————————————————
+
+// Ensure the main menu dropdown position is correct when there is also the
+// drupal toolbar.
+.cd-header {
+  position: relative;
+}
+
 .cd-header button:focus {
   outline: 3px solid $implementation-highlight;
 }
